--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img class="moviePic" src="http://hdqwalls.com/download/titanic-movie-full-hd-3840x2160.jpg">
+	<p class="movieDetail">Titanic</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
